[front] fix wrong font file

--- a/front/src/carbure/assets/css/fonts.css
+++ b/front/src/carbure/assets/css/fonts.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: "Marianne";
-  src: url("../fonts/Marianne/Marianne-Medium.woff") format("woff2"),
+  src: url("../fonts/Marianne/Marianne-Medium.woff2") format("woff2"),
     url("../fonts/Marianne/Marianne-Medium.woff") format("woff");
   font-weight: 600;
 }
